BDSGREEN17: changes to hive-related test scripts - this makes run_all_tests.nokerberos.sh to pass